# sciota-protocol

./: .gitignore  README.md
api/rust/: Cargo.toml
api/rust/src/: lib.rs  protocol.rs
img/: ATTRIBUTION
rust/: Cargo.toml
rust/src/: lib.rs  protocol.rs
